--- a/sendicloud/src/main/resources/application.properties
+++ b/sendicloud/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.datasource.url:jdbc:mysql://192.168.60.137:3306/sendicloud
 spring.datasource.username:datae
+#Sd_12345
 spring.datasource.password:1234
 spring.datasource.driver-class-name:com.mysql.jdbc.Driver
 
+#spring.datasource.url:jdbc:mysql://127.0.0.1:3306/sendicloud
+#spring.datasource.username:root
+#spring.datasource.password:root
+#spring.datasource.driver-class-name:com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.sendi.entity
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -14,6 +19,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.redis.database=0
 # Redis服务器地址
 spring.redis.host=192.168.60.138
+#spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
